# glaze

./: .commitlintrc.json  .gitignore  Cargo.toml  README.md  build.rs  codecov.yml  grcov.yml  package.json  rustfmt.toml
.circleci/: config.yml
.github/workflows/: ci.yml
app/: Cargo.toml  imgui.ini
app/src/: main.rs  ui.rs  viewport.rs
cli/: Cargo.toml
cli/src/: main.rs
converter/: Cargo.toml
converter/src/: main.rs
lib/: Cargo.toml  build.rs
lib/src/: interactive.rs  lib.rs
lib/src/geometry/: camera.rs  color.rs  distribution.rs  light.rs  mesh.rs  mod.rs  scene.rs  spectrum.rs  vertex.rs
lib/src/materials/: library.rs  material.rs  metal.rs  mod.rs  pipeline.rs  shader.rs  texture.rs
lib/src/parser/: filehasher.rs  gltf.rs  mod.rs  v1.rs  v1.rs.orig
lib/src/shaders/: bdpt_connect.rgen  bdpt_final_step.comp  bdpt_first_step.rgen  bdpt_forward.rgen  bdpt_iterative_step.rgen  bdpt_utils.glsl  blit.frag  blit.vert  constants.glsl  direct.rgen  flat.frag  flat.vert  flat_twosided.frag  fresnel.glsl  generate_derivatives.comp  hit.glsl  imgui.frag  imgui.vert  imgui_bw.frag  light_area_sample_visible.rcall  light_omni_gen_photon.rcall  light_omni_sample_visible.rcall  light_sky_sample_visible.rcall  light_sun_gen_photon.rcall  light_sun_sample_visible.rcall  mat_frosted_pdf.rcall  mat_frosted_sample_value.rcall  mat_frosted_value.rcall  mat_glass_pdf.rcall  mat_glass_sample_value.rcall  mat_glass_value.rcall  mat_lambert_pdf.rcall  mat_lambert_sample_value.rcall  mat_lambert_value.rcall  mat_metal_pdf.rcall  mat_metal_sample_value.rcall  mat_metal_value.rcall  mat_mirror_pdf.rcall  mat_mirror_sample_value.rcall  mat_mirror_value.rcall  (+22 more)
lib/src/vulkan/: acceleration.rs  cmd.rs  debug.rs  descriptor.rs  device.rs  imgui.rs  instance.rs  memory.rs  mod.rs  pipeline.rs  raytrace_structures.rs  raytracer.rs  renderer.rs  renderpass.rs  scene.rs  surface.rs  swapchain.rs  sync.rs
lib2/: Cargo.toml
lib2/src/: lib.rs
lib2/src/geometry/: mod.rs
lib2/src/graphics/: config.rs  device.rs  error.rs  format.rs  formats.rs  memory.rs  mod.rs  swapchain.rs
lib2/src/graphics/metal/: device.rs  error.rs  format.rs  memory.rs  mod.rs  swapchain.rs  util.rs
lib2/src/graphics/vulkan/: debug.rs  device.rs  error.rs  extensions.rs  format.rs  instance.rs  memory.rs  mod.rs  physical.rs  swapchain.rs  util.rs
lib2/src/math/: extent.rs  mod.rs  util.rs
lib2/src/util/: collections.rs
resources/: cube.glaze  cube.mtl  mattest.glaze  test.fbx
src/: interactive.rs  lib.rs  main.rs  utility.rs
src/geometry/: aabb.rs  camera.rs  matrix.rs  mesh.rs  mod.rs  point.rs  ray.rs  scene.rs  vec.rs  vertex.rs
src/geometry/tests/: aabb.rs  matrix.rs  mod.rs  point.rs  ray.rs  vec.rs
src/linear/: matrix.rs  mod.rs  point.rs  ray.rs  vec.rs
src/materials/: library.rs  mod.rs  pipeline.rs
src/parser/: filehasher.rs  mod.rs  obj.rs  parser.rs  v1.rs
src/shaders/: test.frag
src/shapes/: aabb.rs  accelerator.rs  kdtree.rs  mesh.rs  mod.rs  shape.rs  sphere.rs
src/shapes/tests/: aabb.rs  mod.rs  sphere.rs
src/utility/: efloat.rs  inlines.rs  mod.rs
src/utility/tests/: efloat.rs  inlines.rs  mod.rs
src/vulkan/: debug.rs  device.rs  instance.rs  mod.rs  platform.rs  renderer.rs  surface.rs  swapchain.rs  sync.rs  validations.rs
