[package]
name = "glaze"
version = "0.3.0"
authors = ["Davide Pizzolotto <davide.pizzolotto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
overload = "0.1"

[dev-dependencies]
assert_approx_eq = "1.1.0"
