[package]
name = "glaze"
version = "0.3.0"
authors = ["Davide Pizzolotto <davide.pizzolotto@gmail.com>"]
edition = "2018"

[[bin]]
name = "glaze"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.33"
winit = "0.25"
log = "0.4"
env_logger = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.20.0"
cocoa = "0.24.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"