[package]
name = "glaze"
version = "0.3.0"
authors = ["Davide Pizzolotto <davide.pizzolotto@gmail.com>"]
edition = "2018"

[[bin]]
name = "glaze"

[build-dependencies]
shaderc = "0.7"

[dependencies]
ash = "0.33"
winit = "0.25"
log = "0.4"
env_logger = "0.9"
cgmath = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.20.0"
cocoa = "0.24.0"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"

[dev-dependencies]
rand = "0.8"
rand_xoshiro = "0.6"
tempfile = "3.2"