[package]
name = "glaze-app"
version = "0.3.0"
authors = ["Davide Pizzolotto <davide.pizzolotto@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"

[dependencies]
glaze = {path="../lib", features=["vulkan"]}
winit = "0.25"
env_logger = "0.9"
log = "0.4"
imgui = "0.8"
image = "0.23"
imgui-winit-support = "0.8"
nfd2 = "0.3"
cgmath = "0.18"