[package]
name = "glaze-app"
version = "0.3.0"
authors = ["Davide Pizzolotto <davide.pizzolotto@gmail.com>"]
edition = "2021"
publish = false
license = "MIT"
description = "Quasi-realtime unbiased GPU tracer, interactive executable"

[dependencies]
glaze = {path="../lib", features=["vulkan-interactive"]}
winit = "0.25"
env_logger = "0.10"
log = "0.4"
imgui = {version="0.8", features=["tables-api"]}
image = "0.24"
imgui-winit-support = "0.8"
cgmath = "0.18"
rfd = {version="0.10", default-features=false, features=["xdg-portal"]}
clap = {version="4.0", features=["derive"]}
