[package]
name = "glaze-cli"
version = "0.3.0"
authors = ["Davide Pizzolotto <davide.pizzolotto@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"
description = "Unbiased GPU renderer"

[dependencies]
glaze = {path="../lib", features=["vulkan"]}
env_logger = "0.9"
log = "0.4"
image = "0.23"
cgmath = "0.18"
clap = {version="3.1", features=["derive"]}
console = "0.15"
