[package]
name = "glaze-cli"
version = "0.3.0"
authors = ["Davide Pizzolotto <davide.pizzolotto@gmail.com>"]
edition = "2021"
publish = false
license = "MIT"
description = "Unbiased GPU renderer"

[dependencies]
glaze = {path="../lib", features=["vulkan"]}
env_logger = "0.10"
log = "0.4"
image = "0.24"
cgmath = "0.18"
clap = {version="4.0", features=["derive"]}
console = "0.15"
indicatif = "0.17"
