[package]
name = "glaze-converter"
version = "0.3.0"
authors = ["Davide Pizzolotto <davide.pizzolotto@gmail.com>"]
license = "MIT"
edition = "2018"

[[bin]]
name = "glaze-converter"
path = "src/main.rs"

[dependencies]
glaze = {path = "../lib", default-features=false}
clap = "2.33"
cgmath = "0.18"
russimp = "0.2.3"
indicatif = "0.17.0-beta.1"
console = "0.15"
image = "0.23"
rayon = "1.5"
tempfile = "3.2"
