[package]
name = "glaze-converter"
version = "0.3.0"
authors = ["Davide Pizzolotto <davide.pizzolotto@gmail.com>"]
license = "MIT"
edition = "2018"
description = "Convert a scene to a format recognizable by glaze"

[[bin]]
name = "glaze-converter"
path = "src/main.rs"

[dependencies]
glaze = {path = "../lib"}
clap = {version="3.1", features=["derive"]}
cgmath = "0.18"
russimp = "0.2.3"
indicatif = "0.17.0-rc.11"
console = "0.15"
image = "0.24"
rayon = "1.5"
tempfile = "3.2"
