[package]
name = "glaze-converter"
version = "0.3.0"
authors = ["Davide Pizzolotto <davide.pizzolotto@gmail.com>"]
license = "MIT"
edition = "2021"
description = "Convert a scene to a format recognizable by glaze"

[[bin]]
name = "glaze-converter"
path = "src/main.rs"

[dependencies]
glaze = {path = "../lib"}
clap = {version="3.2", features=["derive"]}
cgmath = "0.18"
russimp = "1.0.3"
indicatif = "0.17"
console = "0.15"
image = "0.24"
rayon = "1.5"
tempfile = "3.2"
