[package]
name     = "glaze"
version  = "0.3.0"
authors  = ["Davide Pizzolotto <davide.pizzolotto@gmail.com>"]
edition  = "2021"
license  = "MIT"

[build-dependencies]
shaderc = {version="0.7", optional=true}

[dependencies]
log = "0.4"
cgmath = "0.18"
image = "0.23"
twox-hash = "1.6"
fnv = "1.0"
xz2 ="0.1"
ash = {version="0.33", optional=true}
winit = {version="0.25", optional=true}
gpu-allocator = {version="0.10", optional=true}
memoffset = {version="0.6", optional=true}
imgui = {version="0.8", optional=true}

[target.'cfg(all(target_os = "macos",features="vulkan"))'.dependencies]
metal = "0.20.0"
cocoa = "0.24.0"

[target.'cfg(all(target_os = "windows", features="vulkan"))'.dependencies]
winapi = "0.3.9"

[dev-dependencies]
rand = "0.8"
rand_xoshiro = "0.6"
tempfile = "3.2"
float-cmp = "0.9"

[features]
default = ["vulkan"]
vulkan = ["ash", "winit", "gpu-allocator", "memoffset", "imgui", "shaderc"]