[package]
name     = "glaze"
version  = "0.3.0"
authors  = ["Davide Pizzolotto <davide.pizzolotto@gmail.com>"]
edition  = "2021"
license  = "MIT"

[build-dependencies]
shaderc = {version="0.7", optional=true}
syn = {version="1", features=["full"], optional=true}

[dependencies]
log = "0.4"
cgmath = "0.18"
image = "0.23"
twox-hash = "1.6"
fnv = "1.0"
xz2 ="0.1"
rayon = "1.5"
rand = "0.8"
rand_xoshiro = "0.6"
ash = {version="0.35", optional=true}
winit = {version="0.25.0", optional=true}
gpu-allocator = {version="0.16", optional=true}
memoffset = {version="0.6", optional=true}
imgui = {version="0.8", optional=true}
font-kit = {version="0.10", optional=true}

[target.'cfg(target_os = "macos")'.dependencies]
metal = {version="0.20.0", optional=true}
cocoa = {version="0.24.0", optional=true}

[target.'cfg(target_os = "windows")'.dependencies]
winapi = {version="0.3.9", optional=true}

[dev-dependencies]
tempfile = "3.2"
float-cmp = "0.9"
env_logger = "0.9" # log validation errors in vulkan tests

[features]
default = ["vulkan-interactive"]
vulkan = ["ash", "gpu-allocator", "memoffset", "shaderc", "syn"]
vulkan-interactive = ["vulkan", "winit", "imgui", "font-kit", "metal", "cocoa", "winapi"]
