[package]
name     = "glaze-refactor"
version  = "0.3.0"
authors  = ["Davide Pizzolotto <davide.pizzolotto@gmail.com>"]
edition  = "2021"
license  = "MIT"

[dependencies]
log = "0.4"

[target.'cfg(any(target_os="windows", target_os="linux"))'.dependencies]
ash = "0.37"

[target.'cfg(target_os="windows")'.dependencies]
windows = { version = "0.51" }

[target.'cfg(target_os="macos")'.dependencies]
metal = { version = "0.26" }

[features]
