[package]
name     = "glaze-refactor"
version  = "0.3.0"
authors  = ["Davide Pizzolotto <davide.pizzolotto@gmail.com>"]
edition  = "2021"
license  = "MIT"

[dependencies]
log = "0.4"
num-traits = "0.2"
winit = { version = "0.28", optional = true }

[target.'cfg(any(target_os="windows", target_os="linux"))'.dependencies]
ash = "0.37"

[target.'cfg(target_os="windows")'.dependencies]
windows = "0.51"

[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.25"
core-graphics = "0.23"
metal = "0.26"

[dev-dependencies]
float-cmp = "0.9"

[features]
default = ["display"]
display = ["winit"]
